--- a/frontend.html
+++ b/frontend.html
@@ -38,8 +38,12 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698346222-lead-front-end-developer-on-demand-services'>Optimizely Lead Front End Developer, On-Demand Services | SmartRecruiters</a></h5> 
+<h5><a href='http://holycodedoo.applytojob.com/apply/b9Lku46zvp/Senior-Frontend-Developer-Angular-Diversitas-Team'>Senior Frontend Developer (Angular) - Diversitas Team - Holycode - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Optimizely/743999698346222-lead-front-end-developer-on-demand-services'>Optimizely Lead Front End Developer, On-Demand Services | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4499058002'>Job Application for Senior Front-end Engineer at SoundHound Inc.</a></h5> 
@@ -50,15 +54,15 @@
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jkweb.join.com/jobs/460224-web-entwickler-frontend-60-100'>Job @ JKweb (Z?rich): Web Entwickler Frontend 60 -... | JOIN</a></h5> 
+<h5><a href='https://jkweb.join.com/jobs/460224-web-entwickler-frontend-60-100'>Job @ JKweb (Z?rich): Web Entwickler Frontend 60 -... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/DHbmxDnxN7/Front-End-Engineer'>Front End Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/DHbmxDnxN7/Front-End-Engineer'>Front End Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/PgTcQsNt2N/Sales-Tools-FrontEnd-Engineer'>Sales Tools Front-End Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/PgTcQsNt2N/Sales-Tools-FrontEnd-Engineer'>Sales Tools Front-End Engineer - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA  San Francisco</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -84,7 +88,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/graphcore/jobs/4195280002'>Job Application for Analysis Tools Frontend Engineer at Graphcore</a></h5> 
+<h5><a href='https://boards.greenhouse.io/graphcore/jobs/4195280002'>Job Application for Analysis Tools Frontend Engineer at Graphcore</a></h5> 
 <p><span class="badge badge-light">Bristol, UK</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -100,7 +104,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://zigzag.applytojob.com/apply/Gbfk7PS5LF/Web-Designer-Front-End'>Web Designer - Front End - ZigZag Careers - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://zigzag.applytojob.com/apply/Gbfk7PS5LF/Web-Designer-Front-End'>Web Designer - Front End - ZigZag Careers - Career Page</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -260,11 +264,11 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241490-senior-frontend-developer'>Netcentric Senior Frontend Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698241490-senior-frontend-developer'>Netcentric Senior Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698242830-senior-frontend-developer'>Netcentric Senior Frontend Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Netcentric/743999698242830-senior-frontend-developer'>Netcentric Senior Frontend Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -316,7 +320,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">Pune, Maharashtra, India</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/glovo/jobs/4463118002'>Job Application for Frontend Engineer - Warsaw at Glovo</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4463118002'>Job Application for Frontend Engineer - Warsaw at Glovo</a></h5> 
 <p><span class="badge badge-light">Warsaw Warsaw  Warsaw, Poland  Warsaw</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -410,7 +414,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oBdQafwy&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nX6mlMw1'>ServiceNow Careers - Staff Front End Software Engineer, Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oBdQafwy&__jvst=Employee+Referral&__jvsd=sP4ZmfwY&__jvsc=Twitter&bid=nX6mlMw1'>ServiceNow Careers - Staff Front End Software Engineer, Platform</a></h5> 
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -438,7 +442,7 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://interworks.applytojob.com/apply/eeheDbaou2/FrontEnd-Web-Developer'>Front-End Web Developer - InterWorks, Inc. - Career Page</a></h5> 
+<h5><a href='http://interworks.applytojob.com/apply/eeheDbaou2/FrontEnd-Web-Developer'>Front-End Web Developer - InterWorks, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -452,12 +456,6 @@ Frontend Developer (f|m|x) - Acquisition &amp; Loyalty at idealo internet GmbH i
 <hr/>
 <h5><a href='https://jobs.lever.co/3dhubs/fd1a588b-a0de-4f29-a903-a28cfb98fe29'>3D Hubs - FrontEnd Engineer [Angular / NGRX]</a></h5> 
 <p><span class="badge badge-light">Amsterdam</span></p>
-<p>Posted on: 2019-10-26</p>
-<hr/>
-<h5><a href='https://eventstravel.recruitee.com/o/front-end-developer'>
-      Front End Developer - Events Travel
-    </a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
 
