--- a/machine.html
+++ b/machine.html
@@ -107,7 +107,7 @@
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=a504b6c71'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wikimedia/jobs/1670264?gh_src=a504b6c71'>Job Application for Engineering Manager, Machine Learning at Wikimedia Foundation</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -216,7 +216,7 @@ to live.To do this, we offer beautifully furnished and thoughtfully-equipped?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<h5><a href='https://careers.unity.com/position/principal-software-engineer-machine/1859698?gh_src=9dc046f91'>Unity Careers - Principal Software Engineer, Machine Learning, AI@Unity @ Bellevue</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.unity.com/position/principal-software-engineer-machine/1859698?gh_src=9dc046f91'>Unity Careers - Principal Software Engineer, Machine Learning, AI@Unity @ Bellevue</a></h5> 
 <p><span class="badge badge-light">Bellevue  Bellevue  Bellevue</span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -295,7 +295,7 @@ ML;?...</p>
 <p>Oct 11, 2019 ... Machine Learning Engineer. Seattle, WA. Engineering ? Machine Learning. Full-
 time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697823053-machine-learning-engineer-yogyakarta-indonesia-'>A Job Thing Machine Learning Engineer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AJobThing1/743999697823053-machine-learning-engineer-yogyakarta-indonesia-'>A Job Thing Machine Learning Engineer (Yogyakarta, Indonesia) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Indonesia Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -337,7 +337,7 @@ time. Apply for this job. Loftium is a Seattle-based, fast-growing start-up that
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697738897-researcher-machine-learning-for-intelligent-systems-rtc-ai-'>Bosch Group Researcher ? Machine Learning for Intelligent Systems (RTC -AI) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697738897-researcher-machine-learning-for-intelligent-systems-rtc-ai-'>Bosch Group Researcher ? Machine Learning for Intelligent Systems (RTC -AI) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -397,7 +397,7 @@ deploy Machine Learning models into the company's core services. You'll be?...</
 Learning ?Data Scientist. This position collaborates with analytic and data teams 
 to?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/resonate/job/osClbfwk'>Resonate Careers - Software Engineer - Machine Learning</a></h5> 
+<h5><a href='https://jobs.jobvite.com/resonate/job/osClbfwk'>Resonate Careers - Software Engineer - Machine Learning</a></h5> 
 <p><span class="badge badge-light">Reston, Virginia</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -425,7 +425,7 @@ to?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/medallia/7c7e6f2c-85ce-4c7b-8e65-d777f1df5532'>Medallia - Research Scientist - Machine Learning, AI & NLP</a></h5> 
+<h5><a href='https://jobs.lever.co/medallia/7c7e6f2c-85ce-4c7b-8e65-d777f1df5532'>Medallia - Research Scientist - Machine Learning, AI & NLP</a></h5> 
 <p><span class="badge badge-light">Prague</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -470,7 +470,7 @@ and?...</p>
 <p><span class="badge badge-light">Tokyo Tokyo Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/foursquare26/jobs/1920039'>Job Application for Software Engineer - Machine Learning  at Foursquare</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/foursquare26/jobs/1920039'>Job Application for Software Engineer - Machine Learning  at Foursquare</a></h5> 
 <p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
