--- a/project-manager.html
+++ b/project-manager.html
@@ -40,8 +40,20 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698346255-bilingual-technical-project-manager-korean-speaking-is-mandatory'>Bey Bilingual Technical Project Manager - KOREAN SPEAKING IS MANDATORY | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.jobvite.com/braviumconsulting/job/oG0rbfw2'>Bravium Consulting Careers - Data Integrity Project Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oLf4afwY&__jvst=Employee+Referral&__jvsd=sJHwDfwj&__jvsc=Twitter&bid=n39TmMwI'>ServiceNow Careers - Customer Experience Program Manager</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-28</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/blizzard/job/oJSlbfwR'>Blizzard Entertainment Careers - Program Manager Intern</a></h5> 
+<p><span class="badge badge-light">Irvine, CA</span></p>
+<p>Posted on: 2019-10-28</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/Bey/743999698346255-bilingual-technical-project-manager-korean-speaking-is-mandatory'>Bey Bilingual Technical Project Manager - KOREAN SPEAKING IS MANDATORY | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Bellevue Bellevue, WA Bellevue, WA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/guildeducation/jobs/1936576'>Job Application for Senior Program Manager, Academic Partnerships at Guild Education</a></h5> 
@@ -126,11 +138,11 @@
 <p><span class="badge badge-light">Bristol, UK</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://bswhealth.referrals.selectminds.com/jobs/project-manager-iii-temple-36932'>Project Manager III Temple - Baylor Scott & White Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bswhealth.referrals.selectminds.com/jobs/project-manager-iii-temple-36932'>Project Manager III Temple - Baylor Scott & White Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twilio/jobs/1927463'>Job Application for Program Manager, Talent Acquisition at Twilio</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1927463'>Job Application for Program Manager, Talent Acquisition at Twilio</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -338,7 +350,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 <p><span class="badge badge-light">New York City San Francisco Seattle</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/rvm/jobs/1933238'>Job Application for eDiscovery Project Manager (REMOTE -NATIONWIDE) at RVM</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/rvm/jobs/1933238'>Job Application for eDiscovery Project Manager (REMOTE -NATIONWIDE) at RVM</a></h5> 
 <p><span class="badge badge-light">New York City San Francisco Seattle</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -348,7 +360,7 @@ Sr Project Manager IT | El Segundo, CA | Mattel
 product lines such as Adobe's Creative Cloud, Experience Cloud, and Document
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/blizzard/job/owgpbfw6'>Blizzard Entertainment Careers - Senior Program Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/blizzard/job/owgpbfw6'>Blizzard Entertainment Careers - Senior Program Manager</a></h5> 
 <p><span class="badge badge-light">Irvine, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -418,7 +430,7 @@ product lines such as Adobe's Creative Cloud, Experience Cloud, and Document
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/teamviewer-global/job/oCwpbfws'>TeamViewer Global Careers - Senior Project Manager (m/f/d)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/teamviewer-global/job/oCwpbfws'>TeamViewer Global Careers - Senior Project Manager (m/f/d)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -426,7 +438,7 @@ product lines such as Adobe's Creative Cloud, Experience Cloud, and Document
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698267088-epv-sub-project-manager-software-spjm-sw-'>Bosch Group EPV - Sub-Project Manager Software (SPjM SW) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698267088-epv-sub-project-manager-software-spjm-sw-'>Bosch Group EPV - Sub-Project Manager Software (SPjM SW) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -441,18 +453,6 @@ product lines such as Adobe's Creative Cloud, Experience Cloud, and Document
 <h5><a href='https://jobs.lever.co/pointclickcare/c5cccd92-2ffa-4ae9-a2c1-31561102a2c9'>PointClickCare - Project Manager</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='http://rhconstruction.applytojob.com/apply/uPh5YdJkft/Construction-Project-Manager'>Construction Project Manager - R&H Construction - Career Page</a></h5> 
-<p><span class="badge badge-light">Portland, OR</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584449'>Stellenangebot: Project Manager (w/m/d) Digital (Berlin) ? dasauge? Stellenmarkt</a></h5> 
-<p><span class="badge badge-light">Berlin Berlin</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://dasauge.de/jobs/stellenangebote/fest/e584433'>Stellenangebot: Project Manager (w/m/d) E-Commerce (K?ln) ? dasauge? Stellenmarkt</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
 <hr/>
 
 
